fix: Fix swagger API documentation for Gateway (#3678)
