# zaas-service/src/main/resources/zaas-api-doc.json
@@ -44,21 +44,6 @@
                                 }
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "405": {
-                        "description": "Method Not Allowed"
-                    },
-                    "500": {
-                        "description": "Internal error"
                     }
                 }
             }
@@ -87,18 +72,6 @@
                                 }
                             }
                         }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "405": {
-                        "description": "Method Not Allowed"
-                    },
-                    "500": {
-                        "description": "Internal error"
                     }
                 }
             }
@@ -147,12 +120,6 @@
                     "403": {
                         "description": "A client certificate is not provided or is expired."
                     },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "405": {
-                        "description": "Method Not Allowed"
-                    },
                     "500": {
                         "description": "The external security manager failed to generate a PassTicket for the user and application specified."
                     }
@@ -193,10 +160,7 @@
                         "description": "A client certificate is not provided or is expired."
                     },
                     "404": {
-                        "description": "Not Found. The endpoint is not enabled or not propperly configured"
-                    },
-                    "405": {
-                        "description": "Method Not Allowed"
+                        "description": "Not Found. The endpoint is not enabled or not properly configured"
                     },
                     "500": {
                         "description": "Process of refreshing token has failed unexpectedly."
@@ -222,9 +186,6 @@
                 "responses": {
                     "204": {
                         "description": "Invalidated user session"
-                    },
-                    "500": {
-                        "description": "Internal error"
                     }
                 }
             }
@@ -234,17 +195,17 @@
             "post": {
                 "tags": ["Security"],
                 "summary": "Authenticate mainframe user credentials and return personal access token.",
-                "description": "Use the `/login` API to authenticate mainframe user credentials and return personal access token. It is also possible to authenticate using the x509 client certificate authentication, if enabled.\n\n**Request:**\n\nThe login request requires the user credentials in one of the following formats:\n  * Basic access authentication\n  * JSON body, which provides an object with the user credentials\n  * HTTP header containing the client certificate\n\n**Response:**\n\nThe response is an empty body and a token in a secure HttpOnly cookie named `apimlAuthenticationToken`.\n",
+                "description": "Use the `/access-token/generate` API to authenticate mainframe user credentials and return personal access token. It is also possible to authenticate using the x509 client certificate authentication, if enabled.\n\n**Request:**\n\nThe generate request requires the user credentials in one of the following formats:\n  * Basic access authentication\n  * HTTP header containing the client certificate\n\n**Response:**\n\nThe response contains a personal access token in the plain text.\n",
                 "operationId": "access-token-generate-POST",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/LoginRequest"
+                                "$ref": "#/components/schemas/AccessTokenRequest"
                             }
                         }
                     },
-                    "description": "Specifies the user credentials to be authenticated."
+                    "description": "Specifies the parameters of personal access token."
                 },
                 "security": [
                     {
@@ -252,31 +213,13 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "Authenticated",
-                        "headers": {
-                            "Set-Cookie": {
-                                "description": "Cookie named apimlAuthenticationToken contains authentication\ntoken.",
-                                "schema": {
-                                    "type": "string"
-                                }
+                        "content": {
+                            "text/plain": {
+                                "example": "eyJhbGciOiJSUzI1NiJ9.eyJzdWIiOiJVU0VSIiwiaWF0IjoxNzIzNDYyMTY1LCJleHAiOjE3Mjg2NDYxNjUsImlzcyI6IkFQSU1MX1BBVCIsImp0aSI6IjE5Y2E3NGQ4LWNlZDktNGEwZi1hOTRkLWI5ZDE3NmQzM2YxNCIsImF1dGgucHJvdiI6IkFQSU1MIiwic2NvcGVzIjpbImEiLCJiIl19.gcldqnlRDn8cZzdI1ZQJyQKYFrCgIp_BoN01kUDdqiBFSnIDX__Ym8PTQjX5gPgdkoRrLYZaQRHoKKCVur3us-zlQKALV9dP0c1e7DF_mXNq7Cu8vlTF2_ILgs4QTU9OLh0WBODSNOuTXoTz71trA7LrFIWsPr9p7G8gkafb1iGpyPSHw07usMGorHtJ3zU3V2t5F3Kdc-gEKjpekvO2zv_c6Lxx0aUDzDqXH1POhR-bXC1abtzGMM7xf65cutkP2l793w1ajPVrDlSjY-SR-882t-7-Nhjq6OFM1Zm18Yu2-VYil4Wo-pMiFnSnS4n26w_e9dfy9sGMHtgfo98wkg"
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "405": {
-                        "description": "Method Not Allowed"
-                    },
-                    "500": {
-                        "description": "Internal error"
                     }
                 }
             }
@@ -302,6 +245,9 @@
                 "type": "apiKey",
                 "name": "apimlAuthenticationToken",
                 "in": "cookie"
+            },
+            "ClientCert": {
+                "type": "clientTLS"
             }
         },
         "schemas": {
@@ -320,6 +266,23 @@
                 "example": {
                     "username": "John",
                     "password": "qwerty"
+                }
+            },
+            "AccessTokenRequest": {
+                "type": "object",
+                "title": "Login request for personal access token",
+                "properties": {
+                    "validity": {
+                        "type": "integer",
+                        "description": "Days to expiration"
+                    },
+                    "scopes": {
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "description": "Scope of the personal access token"
+                        }
+                    }
                 }
             },
             "Authentication": {
